--- a/projetoNovaJogos/projeto-nova-jogos/src/main/resources/application.yml
+++ b/projetoNovaJogos/projeto-nova-jogos/src/main/resources/application.yml
@@ -1,15 +1,27 @@
+cors:
+  originPatterns: http://localhost:8080,http://localhost:3000,https://leiroz.com.br
+security:
+  jwt:
+    token:
+      secret-key: 53cr37
+      expire-length: 3600000
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/projeto_nova_jogos?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/projeto-nova-jogos?useTimezone=true&serverTimezone=UTC
     username: root
     password: 12102002
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: update
-   #  properties:
-    # hibernate:
-     #   dialect: org.hibernate.dialect.MySQLDialect 
+      ddl-auto: none
+    properties:
+     hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect 
     show-sql: false  
-  
+springdoc:
+  pathsToMatch: 
+    - /auth/**
+    - /api/**/v1/**  
+  swagger-ui:
+    use-root-path: true  
